<resources>
    <string name="app_name">Songle</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_new_game">New Game</string>
    <string name="txt_continue_game">Continue Game</string>
    <string name="txt_load_old_game">Load Previous Game</string>
    <string name="txt_okay">Okay</string>
    <string name="settings">Settings</string>
    <string name="txt_help">Help</string>
    <string name="txt_credits">Credits</string>
    <string name="txt_scores">Scores</string>
    <string name="txt_achievements">Achievements</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Closed</string>
    <string name="title_activity_main_settings">Main Settings</string>
    <string name="download_required">Download Required</string>
    <string name="url_songs_xml">http://www.inf.ed.ac.uk/teaching/courses/selp/data/songs/songs.xml</string>
    <string name="url_general">http://www.inf.ed.ac.uk/teaching/courses/selp/data/songs/</string>
    <string name="signin_other_error">An error occurred while trying to sign in. Try starting the app again</string>
    <string name="msg_welcome_songle">Welcome to Songle!</string>
    <string name="msg_start_select_option">Select an option to get started!</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_exit">Exit</string>
    <string name="txt_new_songs">New Songs!</string>
    <string name="msg_new_songs">New songs have been downloaded!</string>
    <string name="txt_still_loading">Still loading…</string>
    <string name="txt_close_achievements">Close the achievements first</string>
    <string name="txt_calculate_step_size">Calculate your step size!</string>
    <string name="txt_enter_height">Enter your height</string>
    <string name="msg_enter_height">Enter your height (in centimetres).
        \nThis will allow Songle to estimate your step size, so you can see how far you\'ve walked.
    </string>
    <string name="msg_enter_height_try_again">Invalid height
        \nPlease enter it in centimetres
        \n(allowed values 40 to 272)</string>
    <string name="txt_select_song">Select Song</string>
    <string name="txt_select_difficulty">Select Difficulty</string>
    <string name="txt_start_game">Start Game</string>
    <string name="msg_new_game">Please choose a song and a difficulty level</string>
    <string name="msg_diff_error">Difficulty not saved. Please try again.</string>
    <string name="msg_song_number_general">Song #</string>
    <string name="confirm_game_settings">Confirm settings</string>
    <string name="msg_begin_question">Start?</string>
    <string name="network_error">Network Error</string>
    <string name="network_warning">Network Warning</string>
    <string name="msg_data_required">A data connection is required!</string>
    <string name="msg_data_warning">Without data you can only continue your most recent game. Continue?</string>
    <string name="txt_internet_settings">Internet Settings</string>
    <string name="download_error">Download Error</string>
    <string name="msg_download_error">An error occurred while downloading. Please check your internet connection and try again.</string>
    <string name="loading_error">Loading Error</string>
    <string name="msg_game_not_found">Game could not be found! Please start a new game.</string>
    <string name="msg_lyrics_not_found">Lyrics file not found! Please connect to the internet.</string>
    <string name="msg_game_already_completed">Game already completed! If you want to play it again, please connect to the internet.</string>
    <string name="msg_location_rationale">Access to your location is required so you can collect the words of the song. Please allow access for the app to work.</string>
    <string name="msg_location_permission_denied">Permission was denied, but is needed to collect words.</string>
    <string name="txt_gps_disabled">GPS disabled</string>
    <string name="msg_gps_disabled">Your GPS needs to be switched on to collect words</string>
    <string name="txt_switch_on_gps">Switch on GPS</string>
    <string name="txt_location_error">Location error</string>
    <string name="difficulty_insane">Insane</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_moderate">Moderate</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_very_easy">Very Easy</string>
    <string-array name="difficulty_levels">
        <item>Very Easy</item>
        <item>Easy</item>
        <item>Moderate</item>
        <item>Hard</item>
        <item>Insane</item>
    </string-array>
    <string-array name="select_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>
    <string name="msg_no_song_selected">No song selected</string>
    <string name="msg_no_difficulty_selected">No difficulty selected</string>
    <string name="msg_no_songs_found">No songs found. Make sure you are connected to the internet
    and wait for the song list to download.</string>
    <string name="default_no_difficulty_selected">No difficulty selected yet.</string>
    <string name="default_no_song_selected">No song selected yet.</string>
    <string name="maps_tab">Find</string>
    <string name="words_tab">Words</string>
    <string name="guess_tab">Guess</string>
    <string name="msg_title_words_fragment">Words you\'ve collected so far</string>
    <string name="btn_txt_guess">Guess</string>
    <string name="btn_txt_give_up">Give up?</string>
    <string name="txt_default_artist">Artist unknown!</string>
    <string name="artist_revealed">Artist: %1$s</string>
    <string name="fab_reveal_line_txt">Reveal line</string>
    <string name="fab_reveal_artist_txt">Reveal artist</string>
    <string name="fam_get_hint">Get a hint</string>
    <string name="toast_not_enough_words">You don\'t have enough words yet</string>
    <string name="msg_lines_too_short">Cannot reveal a line if there is only one word</string>
    <string name="txt_words_to_line_plural">%1$d more words needed to reveal a line</string>
    <string name="txt_words_to_artist_plural">%1$d more words needed to reveal the artist</string>
    <string name="txt_words_to_line_singular">1 more word needed to reveal a line</string>
    <string name="txt_words_to_artist_singular">1 more word needed to reveal the artist</string>
    <string name="txt_words_to_line_enough">You can reveal a line using your words!</string>
    <string name="txt_words_to_artist_enough">You can reveal the artist using your words!</string>
    <string name="msg_enter_guess">What\'s the song called?</string>
    <string name="txt_are_you_sure">Are you sure?</string>
    <string name="msg_check_give_up">Do you really want to give up?</string>
    <string name="msg_check_give_up_very_easy">Do you really want to give up?\n
        If you collect more words you can get hints which may help!</string>
    <string name="txt_give_up">Give up</string>
    <string name="txt_change_difficulty">Change difficulty</string>
    <string name="txt_keep_playing">Keep playing</string>
    <string name="txt_unlucky">Unlucky!</string>
    <string name="msg_give_up">The song was %1$s by %2$s.\nTry another game!</string>
    <string name="txt_home">Home</string>
    <string name="congratulations">Congratulations!</string>
    <string name="msg_game_win">You\'ve won this game!\nWould you like to see the music video or start a new game?</string>
    <string name="watch_video">Watch video</string>
    <string name="quit">Quit</string>
    <string name="default_timestamp">2017-10-08T10:00:33.775+01:00[Europe/London]</string>
    <string name="google_maps_key">AIzaSyDxdj9m4tadoZalHo2get5nvX2y_UWQTK4</string>
    <string name="song">Songs</string>
    <string name="title_activity_new_game_settings">Game Settings</string>
    <string name="title_activity_main_game">Let\'s Play!</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps2">Map</string>
    <string name="ach_words_1_title">First Word!</string>
    <string name="ach_words_1_msg">Collect your first word from a map</string>
    <string name="ach_words_100_title">Words Wizard</string>
    <string name="ach_words_100_msg">Collect 100 words</string>
    <string name="ach_words_500_title">The Collector</string>
    <string name="ach_words_500_msg">Collect 500 words</string>
    <string name="ach_words_all_title">Gotta Catch \'Em All!</string>
    <string name="ach_words_all_msg">Collect all the words for a song without using any hints</string>
    <string name="ach_song_1_title">The First of Many</string>
    <string name="ach_song_1_msg">Correctly guess a song</string>
    <string name="ach_song_3_title">Oh Baby a Triple!</string>
    <string name="ach_song_3_msg">Correctly guess 3 songs</string>
    <string name="ach_song_10_title">Maestro</string>
    <string name="ach_song_10_msg">Correctly guess 10 songs</string>
    <string name="ach_song_20_title">The Songfather</string>
    <string name="ach_song_20_msg">Correctly guess 20 songs</string>
    <string name="ach_walk_500_title">And I Would Walk 500 Metres</string>
    <string name="ach_walk_500_msg">Walk 500 metres</string>
    <string name="ach_walk_5k_title">I\'m Going Out…And I May Be Gone For Some Time</string>
    <string name="ach_walk_5k_msg">Walk 5 kilometres</string>
    <string name="ach_walk_10k_title">Practically Bear Grylls</string>
    <string name="ach_walk_10k_msg">Improvise. Adapt. Overcome. And walk 10 kilometres</string>
    <string name="ach_line_help_1_title">I\'ve Forgotten My Line!</string>
    <string name="ach_line_help_1_msg">Use a hint to reveal a line</string>
    <string name="ach_line_help_10_title">A Little Help Here?</string>
    <string name="ach_line_help_10_msg">Reveal 10 lines</string>
    <string name="ach_artist_help_title">Arrgh…What Was Their Name?!</string>
    <string name="ach_artist_help_msg">Use a hint to reveal the artist</string>
    <string name="ach_watch_video_title">Don\'t Procrastinate Now</string>
    <string name="ach_watch_video_msg">Watch the video of a song after finding it</string>
    <string name="ach_time_title">Faster Than a Speeding Bullet</string>
    <string name="ach_time_msg">Complete a song in under 30 minutes</string>
    <string name="ach_give_up_title">Ah Cannae Dae It Cap\'n</string>
    <string name="ach_give_up_msg">Give up on a song</string>
    <string name="ach_read_help_title">Pls help</string>
    <string name="ach_read_help_msg">Read the help in the tutorial</string>
    <string name="ach_rickrolled_title">Get Rickrolled</string>
    <string name="ach_rickrolled_msg">Watch the video for Never Gonna Give You Up</string>
    <string name="title_achievement_info">Requirements</string>
</resources>